<resources>
    <string name="app_name">NCCApp</string>

    <string name="email_address">Email Address</string>
    <string name="user_email">Name</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="fullsunnylogo">FullSunnyLogo</string>

    <string name="customer_first_name">First Name</string>
    <string name="customer_surname">Surname</string>
    <string name="customer_phone_number">Phone Number</string>
    <string name="customer_company">Company</string>
    <string name="customer_email">Email Address</string>
    <string name="customer_password">Password</string>

    <string name="loading">We\'re working on it...</string>

    <string name="fcm_sender_id">1052295461212</string>


    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_enter_payment_details">EnterPaymentDetailsActivity</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>

    <string name="placeaquickorder">placeAQuickOrder</string>
    <string name="nothing">Nothing</string>
    <string name="title_activity_customer_retrieve_all_orders_in_database">
        CustomerRetrieveAllOrdersInDatabase
    </string>
    <string name="title_activity_previous_order_detail">PreviousOrderDetailActivity</string>
    <string name="title_activity_default_entry_screen">DefaultEntryScreen</string>
    <string name="title_activity_forgot_password_screen">ForgotPasswordScreen</string>
    <string name="forgotten">Forgotten?</string>
    <string name="title_activity_extended_menu_screen">ExtendedMenuScreen</string>
    <string name="inbox">Inbox</string>
    <string name="title_activity_add_payment_details_screen">AddPaymentDetailsScreen</string>
    <string name="title_activity_inbox">InboxActivity</string>
    <string name="title_activity_main_order_entry">MainOrderEntryActivity</string>
    <string name="my_orders">My Orders</string>
    <string name="review_order">Review Order</string>
    <string name="title_activity_review_order">ReviewOrder</string>
    <string name="title_activity_update_customer_details">UpdateCustomerDetails</string>

    <string name="msg_token_fmt">Token value %s </string>

    <string name="alerts_header">Alerts</string>
    <string name="alert_header">Alert</string>
    <string name="myclassnews_header">My Class News</string>
    <string name="event_header">Events</string>

    // These strings are used when users are downloading a file.
    <string name="http">http://</string>
    <string name="download">Download</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>

    <string name="download_Pdf">Download pdf</string>
    <string name="download_Doc">Download Doc</string>
    <string name="download_zip">Download Zip</string>
    <string name="download_video">Download Video</string>
    <string name="download_mp3">Download MP3</string>
    <string name="openFolder">Open Downloaded Folder</string>
    <string name="downloadStarted">Download Started…</string>
    <string name="downloadCompleted">Download Completed…</string>
    <string name="downloadFailed">Download Failed…</string>
    <string name="downloadAgain">Download Again</string>

    /////////////////////////////////////////////////////////////////////


    <string name="CompanyNotHere">--- My company is not here ---</string>
    <string name="ncctree">nccTree</string>
    <string name="msg_subscribed">The user has subscribeed to the \'All\' Topic</string>
    <string name="msg_subscribe_failed">The subscription to the \'All\' Topic was uncuccessful.</string>
    <string name="from">From:</string>
    <string name="link">Link:</string>
    <string name="date">Date:</string>
    <string name="title_activity">NCC</string>
    <string name="starts">Starts:</string>
    <string name="ends">Ends:</string>
    <string name="documents_header">Documents</string>
    <string name="parents_association">Parents Association</string>
    <string name="document_header">Documents</string>


    // From the Navigation Drawer Tutorial
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_photos">Photos</string>
    <string name="nav_movies">Movies</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about_us">About Us</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="photo_album">Photo Album</string>
    <string name="backarrow">backArrow</string>
    <string name="title_activity_retrieve_payment_types">RetrievePaymentTypes</string>
    <string name="payment_options">Payment Options</string>
    <string name="my_payments">My Payments</string>


</resources>
