<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:windowActionBar="false"
    tools:context=".DetailNews">



    <View
        android:id="@+id/topOfScreen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:background="@color/brandColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/brandColor"
        android:text="@string/myclassnews_header"
        android:textColor="@android:color/white"
        android:gravity="center"
        app:fontFamily="@font/montserrat_medium"
        app:layout_constraintBottom_toBottomOf="@+id/topOfScreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/topOfScreen"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.58" />


    <FrameLayout
        android:id="@+id/backFrameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="@+id/titleText"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@+id/titleText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/titleText"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.15">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/backConstraintInsideFrame"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/largeMenuButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"/>


            <ImageButton
                android:id="@+id/leftarrowwhite"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@android:color/transparent"
                android:contentDescription="backArrow"
                android:cropToPadding="false"
                android:scaleType="fitCenter"
                android:visibility="visible"
                app:layout_constraintBottom_toBottomOf="@+id/backConstraintInsideFrame"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="@+id/backConstraintInsideFrame"
                app:layout_constraintStart_toStartOf="@+id/backConstraintInsideFrame"
                app:layout_constraintTop_toTopOf="@+id/backConstraintInsideFrame"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.5"
                app:srcCompat="@drawable/leftarrowwhite" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </FrameLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/topOfScreen">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/insideScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:id="@+id/subjectView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="16sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@+id/insideScrollView"
                app:layout_constraintStart_toStartOf="@+id/insideScrollView"
                app:layout_constraintTop_toTopOf="@+id/insideScrollView"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.85" />


            <TextView
                android:id="@+id/subheadlineView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                android:textSize="15sp"
                android:textStyle="bold"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toStartOf="@+id/subjectView"
                app:layout_constraintEnd_toEndOf="@+id/subjectView"
                app:layout_constraintTop_toBottomOf="@+id/subjectView" />


            <TextView
                android:id="@+id/fromView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/from"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintStart_toStartOf="@id/subheadlineView"
                app:layout_constraintTop_toBottomOf="@+id/subheadlineView"
                app:layout_constraintWidth_default="percent"
                app:layout_constraintWidth_percent="0.15" />


            <TextView
                android:id="@+id/sentByView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:text=""
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@+id/subheadlineView"
                app:layout_constraintStart_toEndOf="@id/fromView"
                app:layout_constraintTop_toBottomOf="@+id/subheadlineView" />


            <TextView
                android:id="@+id/linkTitleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/link"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@id/fromView"
                app:layout_constraintStart_toStartOf="@id/fromView"
                app:layout_constraintTop_toBottomOf="@+id/fromView" />


            <TextView
                android:id="@+id/linkView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text=""
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@+id/sentByView"
                app:layout_constraintStart_toStartOf="@id/sentByView"
                app:layout_constraintTop_toBottomOf="@+id/sentByView" />


            <TextView
                android:id="@+id/dateTitleView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/date"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@id/fromView"
                app:layout_constraintStart_toStartOf="@id/fromView"
                app:layout_constraintTop_toBottomOf="@+id/linkTitleView" />


            <TextView
                android:id="@+id/dateView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:scrollbars="vertical"
                android:text=""
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@+id/sentByView"
                app:layout_constraintStart_toStartOf="@id/sentByView"
                app:layout_constraintTop_toBottomOf="@+id/linkView" />


            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="@+id/insideScrollView"
                app:layout_constraintStart_toStartOf="@+id/insideScrollView"
                app:layout_constraintTop_toBottomOf="@id/dateTitleView"></LinearLayout>


            <TextView
                android:id="@+id/messageView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:layout_marginTop="8dp"
                android:layout_marginBottom="16dp"
                app:fontFamily="@font/montserrat_medium"
                app:layout_constraintEnd_toEndOf="@+id/subjectView"
                app:layout_constraintStart_toStartOf="@+id/subjectView"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>